--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,55 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+/* Navbar  */
+.active {
+  background-color: #1ABC9C;
+  padding: 8px;
+  border-radius: 7px;
+  transition: all .2s;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+/* Navbar End */
+
+
+
+/* Home  */
+.star::after {
+  content: '';
+  background-color: white;
+  width: 80px;
+  height: 4px;
+  position: absolute;
+  top: 50%;
+  transform: translatex(20%);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.star::before {
+  content: '';
+  background-color: white;
+  width: 80px;
+  height: 4px;
+  position: absolute;
+  top: 50%;
+  transform: translatex(-120%);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+/* Home End  */
+
+
+/* portfolio  */
+
+.portfolio .star::after,
+.portfolio .star::before {
+  background-color: #2C3E50;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/* Portfolio End */
+
+input::placeholder {
+  font-size: 16px;
+  color: rgb(97, 97, 97);
 }
